--- a/SimTECH/SimTECH/Pages/Entrants/Drivers/Index.razor
+++ b/SimTECH/SimTECH/Pages/Entrants/Drivers/Index.razor
@@ -34,7 +34,7 @@
                 <MudButton StartIcon="@Icons.Material.Filled.Sync" IconSize="Size.Small" OnClick="GoToHumanGenerator" Class="btn-md">
                     Generate
                 </MudButton>
-                <MudButton StartIcon="@Icons.Material.Filled.Download" IconSize="Size.Small" OnClick="OpenDriverImporter" Class="btn-md">
+                <MudButton StartIcon="@Icons.Material.Filled.Download" IconSize="Size.Small" OnClick="OpenImporter" Class="btn-md">
                     Import
                 </MudButton>
                 <MudButton StartIcon="@Icons.Material.Filled.Add"
@@ -75,7 +75,7 @@
     </MudDataGrid>
 </MudContainer>
 
-    @code {
+@code {
     private List<Driver> Drivers { get; set; } = new();
     private List<CurrentDriver> CurrentDrivers { get; set; } = new();
 
@@ -162,14 +162,14 @@
         showingArchived = !showingArchived;
     }
 
-    private async Task OpenDriverImporter()
+    private async Task OpenImporter()
     {
         var dialog = await _dialogService.ShowAsync<Import>("Import drivers");
         var result = await dialog.Result;
 
         if (!result.Canceled && result.Data != null && result.Data is List<Driver> bulkDrivers)
         {
-            await _driverService.BulkAddDrivers(bulkDrivers.ToArray());
+            await _driverService.BulkAddItems(bulkDrivers);
             Drivers = await _driverService.GetDrivers();
         }
     }
