--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -107,7 +107,12 @@ th {
 }
 
 .overflow-x-hide {
-    overflow-x: hidden;
+    overflow-x: hidden !important;
+}
+
+.overflow-y-hide,
+.overflow-y-hide > .mud-table-container {
+    overflow-y: hidden !important;
 }
 
 .field-xs, .field-xs > * {
